src/scss/theme/dark/page.scss
@import "~scss/_vars";
@import "~scss/theme/dark/_vars";

/* PageAuth */

.pageAuth, .pageIndex, .pageObject {
    .input { border-color: $colorLinePrimary; }

	.backWrap:hover { color: $colorPrimary; }
    .backWrap:hover {
		.icon.back { background-image: url('#{$themePath}/icon/popup/settings/back1.svg'); } 
	}
}

.pageAuthRegister {
    .iconObject { background-image: url('#{$themePath}/icon/picture.svg'); }

	.advanced { color: $colorSecondary; }
	.advanced:hover { color: $colorPrimary; }
}

.pageAuthDeleted {
	.row { border-color: $colorLineSecondary; }
	.pie .inner { border-color: $colorLineSecondary; }
}

/* PageMainIndex */

.pageMainIndex {

    .animatedBackground {
        background-image: linear-gradient(to right, rgba(0,0,0,0) 8%, $colorTertiary 18%, rgba(0,0,0,0) 33%);
    }

    #documents {
        .emptySearch { background: rgba(0,0,0,0.5); }

        .item { background: rgba(0,0,0,0.5); transition: background 0.2s ease-in-out; }
        .item {
            .type { color: $colorSecondary; }
            .icon.more { background-image: url('#{$themePath}/icon/index/more0.svg'); }
			.icon.more:hover, .icon.more.hover { background-image: url('#{$themePath}/icon/index/more1.svg'); }

            .empty { color: $colorSecondary; }
        }
        .item:hover { background: rgba(0,0,0,0.7); }

        .item.isLoading {
			.iconObject { background: $colorBgIcon; }
			.line.lineName { background-color: $colorBgIcon; }
			.line.lineType { background-color: $colorBgIcon; }
		}
    }
}

/* PageMainGraph */

.pageMainGraph {
    canvas { background: $colorBlack; }
	#loader { background: $colorBlack !important; }

    .wrapper {
        .side.right { background: $colorBlack; border-color: $colorLineSecondary; }
        .side.right {
            .bottom { border-color: $colorLineSecondary; }
            .filter { background: none; }
        }

        .section {
            .item { background: $colorBlack; }
            .item:hover::before { background: $colorHover; }
        }
    }

    .footer {
        .icon { background-color: $colorBgIcon; }
    }
}

/* PageMainStore */

.pageMainStore {
    .body {
		.tabs {
			.tab { color: $colorSecondary; }
			.tab:hover, .tab.active { color: $colorPrimary; }
		}

		.emptySearch { border-color: $colorLinePrimary; }

		.mid {
			.filter { border-color: $colorLinePrimary; }
		}

        .items {
            .item {
                .flex { border-color: $colorLineSecondary; } 
				.flex:hover {  border-color: $colorLinePrimary; background-color: $colorHover; }

				.buttons {
					.icon.lock { background-image: url('#{$themePath}/icon/store/lock.svg'); }
					.icon.check { background-image: url('#{$themePath}/icon/store/check0.svg'); }
					.icon.check:hover { background-image: url('#{$themePath}/icon/store/check1.svg'); }
					.icon.plus { background-image: url('#{$themePath}/icon/store/plus0.svg'); }
					.icon.plus:hover { background-image: url('#{$themePath}/icon/store/plus1.svg'); }

					.button { color: $colorSecondary; }
					.button:hover { color: $colorPrimary; }
				}
            }
        }
    }
}

/* PageMainType */

.pageMainType {
    .wrapper {
        .section.template {
			.btn { color: $colorSecondary; }
			.btn {
				.icon.plus { background-image: url('#{$themePath}/icon/plus/template0.svg'); }
			}

			.btn:hover { color: $colorPrimary; }
			.btn:hover {
				.icon.plus { background-image: url('#{$themePath}/icon/plus/template1.svg'); }
			}

			.listPreviewObject {
				.icon.arrow.left { left: -32px; }
				.icon.arrow.right { right: -32px; }
			}
		}

        .section.relation {
            .item {
                .name { color: $colorSecondary; }
            }
            .item.canEdit, .item.add {
				.clickable:hover { background: $colorHover; }
			}
        }

        table { border-color: $colorLineSecondary; }
        table {
            .cellHead .name { border-color: $colorLineSecondary; color: $colorSecondary; }
            .cell { border-color: $colorLineSecondary; }
            tbody { border-color: $colorLineSecondary; }
        }
    }
}

/* PageMainRelation */

.pageMainRelation {
    .wrapper {
        table { border-color: $colorLineSecondary; }
        table {
            .cellHead .name { border-color: $colorLineSecondary; color: $colorSecondary; }
            .cell { border-color: $colorLineSecondary; }
            tbody { border-color: $colorLineSecondary; }
        }
    }
}

/* PageMainNavigation */

.pageMainNavigation {
	.wrapper > #loader { background: $colorBlack; }
    .selected { border-color: $colorLinePrimary; }
    .selected {
        .descr { color: $colorSecondary; }
    }

    .items {
        .item { border-color: $colorLinePrimary; }
        .item {
            .descr { color: $colorSecondary; }
        }
    }
}

/* PageMainHistory */

.pageMainHistory {
    .list { background: $colorBlack; border-color: $colorLineSecondary; }
    .list {
        .section.fix { background: $colorBlack; }

        .item:hover, .item.active { background: $colorHover; }
        .item {
            .name { color: $colorSecondary; }
            .icon.arrow { background-image: url('#{$themePath}/arrow/historyList.svg'); }
        }
    }
}

/* PageMainBookmark */

.pageMainBookmark {
    .wrapper {
        .item.add:hover { background: $colorHover; }
    }
}

/* PageMainEmpty */

.pageMainEmpty {
    .wrapper {
        .row { border-color: $colorLinePrimary; }
    }
}

